--- a/media.css
+++ b/media.css
@@ -1,3 +1,545 @@
-@media only screen and (max-width: 600px) {
-    
+@media only screen and (max-width: 1400px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 340px;
+    height: 340px;
+    border-radius: 50%;
+    position: relative;
+    left: 225px;
+    bottom: 422px;
   }
+
+  #imgSection {
+    height: 633.9px;
+  }
+}
+
+@media only screen and (max-width: 1181px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 290px;
+    height: 292px;
+    border-radius: 50%;
+    position: relative;
+    left: 188px;
+    bottom: 356px;
+  }
+
+  #imgSection {
+    height: 536px;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 210px;
+    height: 210px;
+    border-radius: 50%;
+    position: relative;
+    left: 140px;
+    bottom: 264px;
+  }
+
+  #imgSection {
+    height: 529.9px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 341px;
+    height: 341px;
+    border-radius: 50%;
+    position: relative;
+    left: 229px;
+    bottom: 424px;
+  }
+
+
+  #imgSection {
+    height: 393.9px;
+  }
+}
+
+@media only screen and (max-width: 575px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 341px;
+    height: 341px;
+    border-radius: 50%;
+    position: relative;
+    left: 249px;
+    bottom: 443px;
+  }
+
+
+  #imgSection {
+    height: 667.9px;
+  }
+}
+
+@media only screen and (max-width: 560px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 341px;
+    height: 341px;
+    border-radius: 50%;
+    position: relative;
+    left: 241px;
+    bottom: 439px;
+  }
+
+  #imgSection {
+    height: 663.9px;
+  }
+}
+
+@media only screen and (max-width: 548px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 341px;
+    height: 341px;
+    border-radius: 50%;
+    position: relative;
+    left: 232px;
+    bottom: 430px;
+  }
+
+  #imgSection {
+    height: 647.9px;
+  }
+}
+
+@media only screen and (max-width: 537px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 341px;
+    height: 341px;
+    border-radius: 50%;
+    position: relative;
+    left: 226px;
+    bottom: 424px;
+  }
+
+  #imgSection {
+    height: 634.9px;
+  }
+}
+
+@media only screen and (max-width: 530px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 330px;
+    height: 330px;
+    border-radius: 50%;
+    position: relative;
+    left: 224px;
+    bottom: 418px;
+  }
+
+  #imgSection {
+    height: 626.9px;
+  }
+}
+
+@media only screen and (max-width: 518px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 330px;
+    height: 330px;
+    border-radius: 50%;
+    position: relative;
+    left: 218px;
+    bottom: 409px;
+  }
+
+  #imgSection {
+    height: 614.9px;
+  }
+}
+
+@media only screen and (max-width: 509px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 320px;
+    height: 320px;
+    border-radius: 50%;
+    position: relative;
+    left: 216px;
+    bottom: 403px;
+  }
+
+  #imgSection {
+    height: 602.9px;
+  }
+}
+
+@media only screen and (max-width: 497px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 320px;
+    height: 320px;
+    border-radius: 50%;
+    position: relative;
+    left: 209px;
+    bottom: 396px;
+  }
+
+  #imgSection {
+    height: 589.9px;
+  }
+}
+
+@media only screen and (max-width: 490px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 310px;
+    height: 310px;
+    border-radius: 50%;
+    position: relative;
+    left: 206px;
+    bottom: 387px;
+  }
+
+  #imgSection {
+    height: 582.9px;
+  }
+}
+
+@media only screen and (max-width: 476px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 310px;
+    height: 310px;
+    border-radius: 50%;
+    position: relative;
+    left: 201px;
+    bottom: 381px;
+  }
+
+  #imgSection {
+    height: 565.9px;
+  }
+}
+
+@media only screen and (max-width: 462px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    position: relative;
+    left: 194px;
+    bottom: 369px;
+  }
+
+  #imgSection {
+    height: 551.9px;
+  }
+}
+
+@media only screen and (max-width: 453px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 290px;
+    height: 290px;
+    border-radius: 50%;
+    position: relative;
+    left: 191px;
+    bottom: 361px;
+  }
+
+  #imgSection {
+    height: 539.9px;
+  }
+}
+
+@media only screen and (max-width: 443px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 290px;
+    height: 290px;
+    border-radius: 50%;
+    position: relative;
+    left: 187px;
+    bottom: 357px;
+  }
+
+  #imgSection {
+    height: 529.9px;
+  }
+}
+
+@media only screen and (max-width: 436px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
+    position: relative;
+    left: 185px;
+    bottom: 349px;
+
+  }
+
+  #imgSection {
+    height: 521.9px;
+  }
+}
+
+@media only screen and (max-width: 428px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
+    position: relative;
+    left: 182px;
+    bottom: 345px;
+
+  }
+
+  #imgSection {
+    height: 510.9px;
+  }
+}
+
+@media only screen and (max-width: 419px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 270px;
+    height: 270px;
+    border-radius: 50%;
+    position: relative;
+    left: 178px;
+    bottom: 336px;
+
+  }
+
+  #imgSection {
+    height: 501.9px;
+  }
+}
+
+@media only screen and (max-width: 412px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 270px;
+    height: 270px;
+    border-radius: 50%;
+    position: relative;
+    left: 174px;
+    bottom: 332px;
+
+  }
+
+  #imgSection {
+    height: 497.9px;
+  }
+}
+
+@media only screen and (max-width: 405px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 270px;
+    height: 270px;
+    border-radius: 50%;
+    position: relative;
+    left: 171px;
+    bottom: 329px;
+
+  }
+
+  #imgSection {
+    height: 484.9px;
+  }
+}
+
+@media only screen and (max-width: 398px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 260px;
+    height: 260px;
+    border-radius: 50%;
+    position: relative;
+    left: 169px;
+    bottom: 321px;
+
+  }
+
+  #imgSection {
+    height: 478.9px;
+  }
+}
+
+@media only screen and (max-width: 390px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 260px;
+    height: 260px;
+    border-radius: 50%;
+    position: relative;
+    left: 165px;
+    bottom: 319px;
+
+  }
+
+  #imgSection {
+    height: 469.9px;
+  }
+}
+
+@media only screen and (max-width: 381px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    position: relative;
+    left: 162px;
+    bottom: 308px;
+
+  }
+
+  #imgSection {
+    height: 459.9px;
+  }
+}
+
+@media only screen and (max-width: 374px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 245px;
+    height: 245px;
+    border-radius: 50%;
+    position: relative;
+    left: 159px;
+    bottom: 303px;
+
+  }
+
+  #imgSection {
+    height: 450.9px;
+  }
+}
+
+@media only screen and (max-width: 366px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 245px;
+    height: 245px;
+    border-radius: 50%;
+    position: relative;
+    left: 156px;
+    bottom: 300px;
+
+  }
+
+  #imgSection {
+    height: 444.9px;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 240px;
+    height: 240px;
+    border-radius: 50%;
+    position: relative;
+    left: 154px;
+    bottom: 292px;
+
+  }
+
+  #imgSection {
+    height: 434.9px;
+  }
+}
+
+@media only screen and (max-width: 351px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 235px;
+    height: 235px;
+    border-radius: 50%;
+    position: relative;
+    left: 150px;
+    bottom: 286px;
+
+  }
+
+  #imgSection {
+    height: 423.9px;
+  }
+}
+
+@media only screen and (max-width: 343px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 218px;
+    height: 218px;
+    border-radius: 50%;
+    position: relative;
+    left: 149px;
+    bottom: 276px;
+
+  }
+
+  #imgSection {
+    height: 415.9px;
+  }
+}
+
+@media only screen and (max-width: 332px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 218px;
+    height: 218px;
+    border-radius: 50%;
+    position: relative;
+    left: 143px;
+    bottom: 269px;
+
+  }
+
+  #imgSection {
+    height: 401.9px;
+  }
+}
+
+@media only screen and (max-width: 321px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 218px;
+    height: 218px;
+    border-radius: 50%;
+    position: relative;
+    left: 138px;
+    bottom: 265px;
+
+  }
+
+  #imgSection {
+    height: 392.9px;
+  }
+}
+
+@media only screen and (max-width: 312px) {
+  #imgshow {
+    vertical-align: middle;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    position: relative;
+    left: 138px;
+    bottom: 252px;
+
+  }
+
+  #imgSection {
+    height: 381.9px;
+  }
+}
