--- a/style.css
+++ b/style.css
@@ -1,21 +1,22 @@
 #imgshow {
     vertical-align: middle;
-    width: 392px;
-    height: 392px;
+    width: 357px;
+    height: 357px;
     border-radius: 50%;
     position: relative;
     left: 264px;
-    bottom: 489px;
+    bottom: 604px;
 }
 
 #themeImg {
     width: 100%;
-    height: auto
+    height: auto;
 }
 
 #userName {
     font-size: 20px;
     font-weight: bolder;
+    color: white;
 }
 
 #userName {
@@ -24,6 +25,7 @@
     height: 392px;
     border-radius: 50%;
     position: relative;
-    left: 31px;
-    bottom: 268px;
+    right: 323px;
+    bottom: 503px;
+
 }
