--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     left: 287px;
     bottom: 622px;
 }
+
 #themeImg {
     width: 100%;
     height: auto;
@@ -14,7 +15,8 @@
 
 #userName {
     font-size: 20px;
-    font-weight: bolder;
+    text-decoration: underline;
+    font-weight: 800;
     color: white;
     width: 392px;
     height: 392px;
