--- a/style2.css
+++ b/style2.css
@@ -1,31 +1,1 @@
-#imgshow {
-    vertical-align: middle;
-    width: 168px;
-    height: 325px;
-    position: relative;
-    left: 461px;
-    bottom: 799px;
-    border-top-left-radius: 20px;
-}
-
-#themeImg {
-    width: 100%;
-    height: auto
-}
-
-#userName {
-    font-size: 20px;
-    text-decoration: underline;
-    font-weight: 800;
-    color: rgb(0, 0, 0);
-    width: 392px;
-    height: 392px;
-    position: relative;
-    right: -221px;
-    bottom: 613px;
-}
-
-#footer {
-    position: relative;
-    bottom: -90px
-}
+#imgshow{vertical-align:middle;width:168px;height:325px;position:relative;left:461px;bottom:799px;border-top-left-radius:20px}#themeImg{width:100%;height:auto}#userName{font-size:20px;text-decoration:underline;font-weight:800;color:rgb(0,0,0);width:392px;height:392px;position:relative;right:-221px;bottom:613px}#footer{position:relative;bottom:-90px}
